capabilities/neuvector/manifests/networkpolicies/egress-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-kube-api-controller
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-controller-pod
  egress:
  - to:
    - ipBlock:
        cidr: "0.0.0.0/0"
        # ONLY Block requests to cloud metadata IP
        except:
        - 169.254.169.254/32
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-kube-api-updater
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-updater-pod
  egress:
  - to:
    - ipBlock:
        cidr: "0.0.0.0/0"
        # if 0.0.0.0/0 ONLY Block requests to cloud metadata IP
        except:
        - 169.254.169.254/32
  policyTypes:
  - Egress
