capabilities/neuvector/manifests/networkpolicies/ingress-istio.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-manager-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-ingressgateway
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-admin-gateway
    ports:
    - port: 8443
      protocol: TCP
